--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -33,5 +33,5 @@ jobs:
         
     - uses: Kir-Antipov/mc-publish@v3.3
       with:
-        modrinth-id: AANobbMI
+        modrinth-id: bYwHgKTK
         modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
