--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -1,18 +1,22 @@
-name: Publish on GitHub & Modrinth
+name: Publish on GitHub, CurseForge & Modrinth    
  
-on: [ pull_request, workflow_dispatch ]
+on: [ pull_request, workflow_dispatch ]           
 
-env:
-  MINECRAFT_VERSION: 1.20.2
-  JAVA_VERSION: 17                   
+env:                                              
+  MINECRAFT_VERSION: 1.20.2                        
+  JAVA_VERSION: 17      
+  VERSION: 1.0.4-1.${{ env.MINECRAFT_VERSION }}
+  RELEASE_NAME: NUB's QoL Mods ${{ VERSION }}
+  MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}           
 
 permissions:
   contents: write
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:                                      
+jobs:                                             
+  build:                                          
+    runs-on: ubuntu-latest                        
+    steps:                                        
       - name: Check Environment Variables
         run: env
 
@@ -35,18 +39,18 @@ jobs:
         run: ./gradlew clean build
         
       - name: Publish (CurseForge/Modrinth/GitHub)
-        uses: Kir-Antipov/mc-publish@v3.2
+        uses: Kir-Antipov/mc-publish@v3.2                                   
         with:
-          modrinth-id: bYwHgKTK
+          modrinth-id: bYwHgKTK                                             
           modrinth-token: "${{env.MODRINTH_TOKEN}}"
-
-          github-tag: "v${{env.VERSION}}"
-          github-token: "${{env.PAT_GITHUB_TOKEN}}"
           
+          github-tag: "v${{env.VERSION}}"
+          github-token: "${{env.GITHUB_TOKEN}}"
+
           name: "${{env.RELEASE_NAME}}"
           version: "${{env.VERSION}}"
           version-type: release
-          changelog-file: CHANGELOG.md
+          changelog-file: CHANGELOG.md                                      
 
           loaders: fabric
           game-versions: "${{env.MINECRAFT_VERSION}}"
