--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -5,8 +5,8 @@ on: [ pull_request, workflow_dispatch ]
 env:                                              
   MINECRAFT_VERSION: 1.20.2                        
   JAVA_VERSION: 17      
-  VERSION: 1.0.4-1.${{ env.MINECRAFT_VERSION }}
-  RELEASE_NAME: NUB's QoL Mods ${{ VERSION }}
+  VERSION: "1.0.4-1.${{ env.MINECRAFT_VERSION }}"
+  RELEASE_NAME: "NUB's QoL Mods ${{ env.VERSION }}"
   MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}           
 
