--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -1,57 +1,57 @@
-name: Publish on GitHub, CurseForge & Modrinth    
- 
-on: [ pull_request, workflow_dispatch ]           
+name: Publish on GitHub, CurseForge & Modrinth
+
+on: [ pull_request, workflow_dispatch ]
 
 env:                                              
-  MINECRAFT_VERSION: 1.20.2                        
-  JAVA_VERSION: 17      
-  VERSION: "1.0.4-${{env.MINECRAFT_VERSION}}"
-  RELEASE_NAME: "NUB's QoL Mods ${{env.VERSION}}"
+  MINECRAFT_VERSION: 1.20.2
+  MOD_VERSION: 1.0.4
+  JAVA_VERSION: 17
+  RELEASE_NAME: "NUB's QoL Mods"
   MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
-  GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}           
-
+  GITHUB_TOKEN: ${{ secrets.PAT_GITHUB_TOKEN }}
+  
 permissions:
   contents: write
-
-jobs:                                             
-  build:                                          
-    runs-on: ubuntu-latest                        
-    steps:                                        
+  
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Check Environment Variables
         run: env
-
+        
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
           submodules: true
-
+          
       - name: Setup Java
         uses: actions/setup-java@v2
         with:
           distribution: "temurin"
           java-version: 17
-
+          
       - name: Make Gradle Wrapper Executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
-
+        
       - name: Build
         run: ./gradlew clean build
         
       - name: Publish (CurseForge/Modrinth/GitHub)
-        uses: Kir-Antipov/mc-publish@v3.2                                   
+        uses: Kir-Antipov/mc-publish@v3.2
         with:
-          modrinth-id: bYwHgKTK                                             
+          modrinth-id: bYwHgKTK
           modrinth-token: "${{env.MODRINTH_TOKEN}}"
           
           github-tag: "v${{env.VERSION}}"
           github-token: "${{env.GITHUB_TOKEN}}"
-
-          name: "${{env.RELEASE_NAME}}"
+          
+          name: "${{env.RELEASE_NAME}} ${{env.MINECRAFT_VERSION}}-${{MOD_VERSION}}"
           version: "${{env.VERSION}}"
           version-type: release
-          changelog-file: CHANGELOG.md                                      
-
+          changelog-file: CHANGELOG.md
+          
           loaders: fabric
           game-versions: "${{env.MINECRAFT_VERSION}}"
           java: "${{env.JAVA_VERSION}}"
