--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -40,6 +40,7 @@ jobs:
         
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Publish (CurseForge/Modrinth/GitHub)
         uses: Kir-Antipov/mc-publish@v3.2
