--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
 name: Publish on GitHub & Modrinth
 
-on: [ pull_request, workflow_dispatch ]
+on: [ release, workflow_dispatch ]
 
 env:                                              
   MINECRAFT_VERSION: 1.20.2
@@ -13,8 +13,8 @@ env:
 permissions:
   contents: write
   
-jobs:
-  build:
+jobs:        
+  publish:
     runs-on: ubuntu-latest
     steps:
       - name: Check Environment Variables
@@ -38,10 +38,6 @@ jobs:
       - name: Build
         run: ./gradlew clean build
         
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Publish (CurseForge/Modrinth/GitHub)
         uses: Kir-Antipov/mc-publish@v3.2
         with:
