--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-name: Publish on GitHub & Modrinth
+name: Build project
 
-on: [ pull_request, workflow_dispatch ]
+on: [ pull_request ]
   
 permissions:
   contents: write
