--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
 name: Publish on GitHub & Modrinth
 
-on: [ release, workflow_dispatch ]
+on:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 env:                                              
   MINECRAFT_VERSION: 1.20.2
