--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,6 @@ on:
 
 env:                                              
   MINECRAFT_VERSION: 1.20.2
-  MOD_VERSION: 1.0.4
   JAVA_VERSION: 17
   RELEASE_NAME: "NUB's QoL Mods"
   MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
@@ -50,7 +49,7 @@ jobs:
           github-tag: "v${{env.VERSION}}"
           github-token: "${{env.GITHUB_TOKEN}}"
           
-          name: "${{env.RELEASE_NAME}} ${{env.MOD_VERSION}}-${{env.MINECRAFT_VERSION}}"
+          name: "${{env.RELEASE_NAME}} ${{github.ref_name}}-${{env.MINECRAFT_VERSION}}"
           version: "${{env.VERSION}}"
           version-type: release
           changelog-file: CHANGELOG.md
