--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: Publish on GitHub & Modrinth
 
 on:
-    release:
-        types: [published]
-    workflow_dispatch:
+    push:
+        tags: 
+          - r-*
 
 permissions:
     contents: write
