--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
             - name: Build
               run: ./gradlew clean build
             
-            - name: Publish (CurseForge/Modrinth/GitHub)
+            - name: Publish (Modrinth/GitHub)
               uses: Kir-Antipov/mc-publish@v3.2
               with:
                   modrinth-id: bYwHgKTK
